Fix for jumping search button

--- a/app/assets/stylesheets/resources_search.css.scss
+++ b/app/assets/stylesheets/resources_search.css.scss
@@ -16,7 +16,7 @@
         border: 1px solid #ccc;
         margin: 10px;
         padding: 10px;
-        width: 280px;
+        min-width: 280px;
         &:focus {
           @include box-shadow(0, 0, 2px, $dark-blue);
         }
